2007-09-25  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg4win.nsi: Disable kdelibs, kdesupport, oxygen-icons in
	light installer.
	* configure.ac: Add check for kdelibs.
	* include/config.nsi.in: Add macros for kdelibs.
	* src/inst-kdelibs.nsi, src/uninst-kdelibs.nsi: New files.
	* src/Makefile.am (gpg4win_bpkgs): Add kdelibs.
	(EXTRA_DIST): Add inst-kdelibs.nsi and uninst-kdelibs.nsi.
	* src/inst-sections.nsi: Add support for kdelibs.
	* packages/packages.current: Add kdelibs.

	* configure.ac: Add check for oxygen-icons.
	* include/config.nsi.in: Add macros for oxygen-icons.
	* m4/gpg4win.m4: Fix translit expression (dash must come first or last).
	* src/inst-oxygen-icons.nsi, src/uninst-oxygen-icons.nsi: New files.
	* src/Makefile.am (gpg4win_bpkgs): Add oxygen-icons.
	(EXTRA_DIST): Add inst-oxygen-icons.nsi and
	uninst-oxygen-icons.nsi.
	* src/inst-sections.nsi: Add support for oxygen-icons.
	* packages/download.sh (name): Add "link" option.
	* packages/packages.current: Add oxygen-icons.

2007-09-24  Marcus Brinkmann  <marcus@g10code.de>

	* src/Makefile.am (EXTRA_DIST): Add inst-kdesupport.nsi and
	src/uninst-kdesupport.nsi.
	(gpg4win_bpkgs): Add kdesupport.
	(gpg4win_pkg_kdesupport_post_install): New macro.
	* src/inst-kdesupport.nsi, src/uninst-kdesupport.nsi: New files.
	* src/inst-sections.nsi: Add kdesupport (also as a dependency for
	Qt).
	* packages/packages.current: Add kdesupport.
	* include/config.nsi.in: Add macros for kdesupport.
	* configure.ac: Check for kdesupport.  Make qt dependent on it.

	* configure.ac: Check for mingwm10.dll.
	* src/gpg4win.mk.in: Fix clean-PKG for binary packages.
	* src/inst-qt.nsi: Install QtDBus4.dll.  Do not install debug and
	source files.
	* src/uninst-qt.nsi: Likewise for uninstall.
	* packages/packages.current: Update Qt.

2007-09-17  Werner Koch  <wk@g10code.com>

	* configure.ac: Set version to 1.9.0-svn.  Make gpgme depend on qt
	again.
	* src/Makefile.am (gpg4win_pkg_gpgme_configure): Enable Qt again.