@@ -218,6 +218,7 @@ GPG4WIN_BPKG_GNUWIN32([kdesupport])
 GPG4WIN_BPKG_GNUWIN32([qt], [kdesupport])
 GPG4WIN_BPKG_BINSRC([oxygen-icons])
 GPG4WIN_BPKG_GNUWIN32([kdelibs], [qt oxygen-icons])
+GPG4WIN_BPKG_BINSRC([kleopatra], [gpgme gnupg gnupg2 kdelibs])
 
 GPG4WIN_FINALIZE
 
